--- a/styles/design.css
+++ b/styles/design.css
@@ -7,25 +7,31 @@
   font-style: normal;
 }
 .Main{
-    width: 1480px;
-    height: 652px;
-    padding: 
+    max-width: 1480px;
+    max-height: 652px;
+   margin: 0 auto; 
    
 }
 
 
+
 .top{
-   
     background-image: url('../assets/Hero-bg.png');
-    padding:26px 221px;
-    padding: ;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 32px;
+   text-align: center;
+   padding: 26px 221px 44px;
+   
+    
    
     
 }
 .imgroup{
     width: 240px;
     height: 240px;
-   margin: 0px 599px;
+   text-align: center;
   
 
     
@@ -41,15 +47,29 @@
     font-size: 48px;
     color:#0D1321;
     text-align: center;
-    margin: 221px 298px 218px;
    
+   
+}
+.txt{
+    font-weight:700;
+    font-size: 24px;
+    color:rgba(13, 19, 33, 0.7);
+   
+    
+}
+
+.qtitle{
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    text-align: center;
 }
 
 .top-total{
-    width: 998px;
-    height: 210px;
+   
+   
     text-align: center;
-    margin:0px 221px;
+
    
 }
 
@@ -59,6 +79,55 @@
     background-color: #0D1321;
     color: #FFFFFF;
     font-size: 20px;
-    font-weight: 700px;
+    font-weight: 700;
     border-radius: 8px;
+    border: none;
+}
+
+.btn-p:hover{
+    background-color: rgb(70, 60, 48);
+}
+
+.q-container{
+    padding: 80px 97px;
+    border-radius: 16px;
+
+background: rgba(13, 19, 33, 0.02);
+   
+}
+
+.ques-box{
+    background-color: white;
+    text-align: center;
+    border-radius: 10px;
+
+}
+
+
+.qbox{
+    display: flex;
+    justify-content: space-between;
+    padding: 48px;
+    width: 850px;
+    height: 240px;
+
+    background-color:white ;
+    border-radius: 16px;
+   background: linear-gradient(90.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+   
+}
+
+.btn{
+    height: 48px;
+    width: 150px;
+   
+    color:  rgb(13, 19, 33);
+    font-size: 20px;
+    font-weight: 600;
+    box-sizing: border-box;
+    border: 1px solid rgb(13, 19, 33);
+     opacity: 0.7;
+     margin: 32px 0px;
+
+
 }
