--- a/styles/design.css
+++ b/styles/design.css
@@ -93,6 +93,7 @@
     border-radius: 16px;
 
 background: rgba(13, 19, 33, 0.02);
+margin: 50px;
    
 }
 
@@ -108,8 +109,8 @@ background: rgba(13, 19, 33, 0.02);
     display: flex;
     justify-content: space-between;
     padding: 48px;
-    width: 850px;
-    height: 240px;
+    width: 1050px;
+    height: 260px;
 
     background-color:white ;
     border-radius: 16px;
@@ -130,4 +131,125 @@ background: rgba(13, 19, 33, 0.02);
      margin: 32px 0px;
 
 
+}
+.inspo{
+    text-align: center;
+    padding: 0px 144px;
+    padding-bottom: 10px;
+}
+.inspo-video{
+    
+    border: 10px solid #FFFFFF;
+    border-radius: 30px;
+
+}
+.inspire{
+    display: flex;
+    justify-content: center;
+   align-items: center;
+   flex-direction: column;
+    gap: 44px;
+    padding: 32px;
+}
+
+
+.bottom{
+    background-image: url(../assets/handshake.jpg);
+
+    max-width: 1140px;
+    height: 313px;
+ 
+    padding: 64px 48px;
+    margin: 100px auto;
+    justify-content: center;
+    color: #FFFFFF;
+    text-align: center;
+    background-position: center;
+    border: 20px solid white;
+    border-radius: 50px;
+    
+    
+
+}
+.support{
+    
+    background: rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    width: 100%;
+    border-radius: 16px;
+}
+.support-form{
+    gap: 10px;
+}
+
+.support-form input[type="text"] {
+    width: 50%;
+    padding: 10px;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    margin: 20px;
+    height: 57px;
+    
+}
+.sec-separator{
+    height: 50px;
+    width: 100%;
+}
+
+
+
+.support-form input[type="submit"] {
+    padding: 10px 20px;
+    border-radius: 8px;
+    border: none;
+    background-color: #d7dbe6;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+    height: 57px;
+    width: 120px;
+
+}
+.plan{
+    margin: 50px auto;
+    max-width: 1200px;
+}
+.plan-main{
+   justify-items: center;
+    height: 460px;
+   
+    margin-bottom: 50px;
+}
+.plan2{
+    text-align: center;
+    padding: 20px;
+}
+
+.plan-flex{
+    display: flex;
+    gap: 24px;
+
+}
+
+.plan-1{
+    background-color: rgba(255, 76,30,.05);
+    width: 364px;
+    height: 299px;
+    padding: 50px;
+    border-radius: 16px;
+}
+.plan-2{
+    background-color: rgba(0, 76, 232, .05);
+    width: 364px;
+    height: 299px;
+    padding: 50px;
+    border-radius: 16px;
+}
+.plan-3{
+    background-color: rgba(255, 223, 0, 0.05);
+    width: 364px;
+    height: 299px;
+    padding: 50px;
+    border-radius: 16px;
 }
